# PROJETO_PESQUISA

./: index.html  instalador_pendencias.sh  manual.txt  styles.css
fases/implementacao/: SomentePublisherMsg_msg1  SomenteSubcriber  SubscriberPublisherMsg_msg1_1_vez  conexao
fases/implementacao/NanoSDK_code/: notes.txt
fases/implementacao/NanoSDK_code/client/: CMakeLists.txt  quic_client.c
fases/implementacao/NanoSDK_code/publisher/: publisher.c
fases/implementacao/PubSubHiredis/teste/Analise/: analise.py
fases/implementacao/PubSubHiredis/teste/final_test/pub/tcp/: CMakeLists.txt
fases/implementacao/PubSubHiredis/teste/quic/: README.md
fases/implementacao/PubSubHiredis/teste/testlibrary/: CMakeLists.txt  cmake_uninstall.cmake.in
fases/implementacao/PubSubHiredis/teste/testlibrary/include/: save_data.h
fases/implementacao/PubSubHiredis/teste/testlibrary/src/: latency.c
fases/implementacao/brokerEmqx/: install_emqx.sh
fases/implementacao/broker_emqx/: main.c  tutorial.txt
fases/implementacao/docker/: Dockerfile  docker-compose.yml
fases/implementacao/pub_sub_hiredis/: install_hiredis.sh  install_valkey.sh
fases/implementacao/pub_sub_hiredis/pub/: publisher.c
fases/implementacao/pub_sub_hiredis/sub/: sub.c
fases/implementacao/pub_sub_hiredis/teste/: .gitignore  installing_compile_project.sh
fases/implementacao/pub_sub_hiredis/teste/Analise/: README.md  analise.py  requirements.txt
fases/implementacao/pub_sub_hiredis/teste/new_teste/pub/quic/: CMakeLists.txt  pub_quic.c
fases/implementacao/pub_sub_hiredis/teste/quic/pub/: CMakeLists.txt  README.md  publisher.c
fases/implementacao/pub_sub_hiredis/teste/testlibrary/: testlibraryConfig.cmake  testlibraryConfig.cmake.in
fases/resultados/ResultadosTesteDesempenho/: EXPLICAÇÃO DOS DIRETÓRIOS.docx  imagem-conexao.py
fases/resultados/ResultadosTesteDesempenho/100ms_individual/100msQuic/: latencias_100msQuic.csv
fases/resultados/ResultadosTesteDesempenho/100ms_individual/100msTLS/: latencias_100msTLS.csv
fases/resultados/ResultadosTesteDesempenho/50ms_individual/50msQuic/: analise_completa_50msQuic.docx
fases/resultados/ResultadosTesteDesempenho/50ms_individual/50msTLS/: latencias_50msTLS.csv
fases/resultados/ResultadosTesteDesempenho/comparacao_100ms_1k_pacotes/: analise_comparativa_chaves.docx  gerador-unificado.py
fases/resultados/ResultadosTesteDesempenho/comparacao_100ms_1k_pacotes/comparação estatistica/: gerador-grafico-us.py
fases/resultados/ResultadosTesteDesempenho/comparacao_50ms_1k_pacotes/: analise_comparativa_chaves.docx
fases/resultados/ResultadosTesteDesempenho/comparacao_50ms_1k_pacotes/comparação estatistica/: latencias_50msQuic.csv
fases/resultados/ResultadosTesteDesempenho/pacotes_wireshark/quic/: 100msQuic.pcap  50ms_quic.csv  packet_media.py
fases/resultados/ResultadosTesteDesempenho/pacotes_wireshark/tcp/: packet_media.py
fases/resultados/ResultadosTesteDesempenho/pacotes_wireshark/tls/: 100msTLS.pcap  50ms_tls.csv
fases/resultados/Resultados_teste_desempenho/: imagem-conexao.py  img_conn.py
fases/resultados/Resultados_teste_desempenho/100ms_individual/100msQuic/: analise_completa_100msQuic.docx
fases/resultados/Resultados_teste_desempenho/100ms_individual/100msTCP/: analise_completa_100msTCP.docx  latencias_100msTCP.csv
fases/resultados/Resultados_teste_desempenho/100ms_individual/100msTLS/: analise_completa_100msTLS.docx
fases/resultados/Resultados_teste_desempenho/50ms_individual/50msTCP/: analise_completa_50msTCP.docx  latencias_50msTCP.csv
fases/resultados/Resultados_teste_desempenho/50ms_individual/50msTLS/: analise_completa_50msTLS.docx
fases/resultados/Resultados_teste_desempenho/comparacao_100ms_1k_pacotes/: gerador-unificado.py
fases/resultados/Resultados_teste_desempenho/comparacao_100ms_1k_pacotes/comparação estatistica/: gerador-aglutinado-graph.py  (+1 more)
quic/: Example_quic.py  client.crt  client.crt:Zone.Identifier  client.key  quic.py
quic/exemplo-aioquic-http3/: README.MD  certificate.pem  client-execucao.sh  client.py  demo.py  execucao.sh  private_key.pem  server-execucao.sh  server.py  verificacao.sh
quic/teste-mqtt/: ca.crt  ca.key  client.csr  criador_ca.sh  instalador_quic.bash  publisher_quic.py  subscriber_quic.py
reports/pt_br/: 2023-20240324T151126Z-001.zip:Zone.Identifier  index.html  script.js  styles.css
reports/pt_br/2023/Agosto/: Pesquisa IFPE-16_08_2023.docx  Pesquisa IFPE-23_08_2023.docx  Pesquisa IFPE-30_08_2023_.docx  documents.json
reports/pt_br/2023/Dezembro/: Pesquisa IFPE -06_12_2023.docx  documents.json
reports/pt_br/2023/Novembro/: Pesquisa IFPE-01_11_2023.docx  Pesquisa IFPE-08_11_2023.docx  Pesquisa IFPE-15_11_2023(1).docx  documents.json
reports/pt_br/2023/Outubro/: Pesquisa IFPE-04_10_2023.docx  Pesquisa IFPE-11_10_2023.docx  Pesquisa IFPE-18_10_2023.docx  Pesquisa IFPE-25_10_2023.docx  documents.json
reports/pt_br/2023/Setembro/:  Pesquisa IFPE-20_09_2023.docx  Pesquisa IFPE-06_09_2023.docx  Pesquisa IFPE-13_09_2023.docx  Pesquisa IFPE-27_09_2023.docx  documents.json
reports/pt_br/2024/Fevereiro/: Aglutinado 3 primeiras semanas-21_02_2024.docx  Relatório para o professor Ramon.docx  Ultima semana Fevereiro.docx  documents.json
reports/pt_br/2024/Janeiro/: Pesquisa IFPE 17-01-2024.docx  Pesquisa IFPE-08-01-2024.docx  Pesquisa IFPE-25_01_2024 e 02_02_2024.docx  documents.json
reports/pt_br/2024/Março/: Relatório Parcial-Rascunho.docx  Relatório Parcial-definitivo.docx  Relatório semanal 18-03-2024.docx  Relatório-Parcial-Definitivo-Davi-Ramon-David-Final-Review.docx  documents.json  semana-1-WSL2.docx
reports/pt_br/23-08-2023/: 23-08-2023.html
reports/pt_br/agosto/: 16-08-2023.html  30-08-2023.html
reports/pt_br/html/: generate-json-document.py
reports/pt_br/outubro/: 4-10-2023.html
reports/pt_br/setembro/: 06-09-2023.html  20-09-2023.html  27-09-2023.html
reports/pt_br/setembro/13-09-2023/: 13-09-2023.html
test_msquic/: install_ubuntu.sh  test.cs
udp/: publisher_udp.py  subscriber_udp.py
(+59 files in other folders)
